# alpd-map-reduce-project

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.c
defs/: DirectoryFiles.h  ErrorHandling.h  FileOperations.h  Logging.h  MapReduceOperation.h  Utils.h
src/: ErrorHandling.c  FileOperations.c  MapReduceOperation.c  Utils.c
